derive/test/compile_fail/union.stderr
error: unions are not supported for sval derive
 --> compile_fail/union.rs:4:5
  |
4 | pub union Union {
  |     ^^^^^
